--- a/Fuel Savings/Fuel Savings-Info.plist
+++ b/Fuel Savings/Fuel Savings-Info.plist
@@ -34,5 +34,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<false/>
 </dict>
 </plist>
